# SimplifAI

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  chain.py  default.sqlite  eval_prompts.py  feedback_functions.ipynb  frontend.py  prompts.py  pyproject.toml  requirements.txt
GUI/: gradio-infos.md  set_env_variables.py  ui-test.py
GUI-Tests/: fine-acronym-407108-017b3c3578de.json  igneous-visitor-407107-17758a215e3e.json
backend/: chain.py  default.sqlite  feedback_functions.ipynb  frontend.py  observability.ipynb
backend/custom_feedback/: custom.py
custom_feedback/: custom.py  eval_prompts.py
debug/GUI-Tests/: ui-test.py
helper_functions/: set_env_variables.py
html/: logo.html
notebooks/: classifier_finetuning.ipynb  eval_with_mistral.ipynb  feedback_functions.ipynb  observability.ipynb
observability/: observability.ipynb  observability.py  run.ipynb
src/: backend.py  config.py  frontend.py
src/evaluation/: chain_prompts.py  custom.py
src/observability/: classifier.py  output.py
src/simplifier/: chain.py  prompts.py
