[tool.poetry]
name = "simplifai"
version = "0.1.0"
description = ""
authors = ["Joel Weiss <joel.weiss@hpe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
trulens_eval = "0.18.2"
evaluate = "0.4.1"
spacy = "3.7.3"
bert_score= "0.3.13"
gradio = "3.41.0"
trulens = "0.13.4"
scipy= "1.12.0"
text-generation = "0.6.1"
llama-index = "0.8.69"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
